# uprocserver-sdk

./: .gitignore  .travis.yml  Makefile  pyproject.toml  pytest.ini  tox.ini
docs/: Makefile  conf.py  index.rst
docs/examples/: index.rst
tests/: test_io.py
upserver_sdk/: __init__.py  io.py
upserver_sdk/client/: v1.py
