[tool.poetry]
name = "uprocserver-sdk"
version = "0.1.0+rc1"
description = "Micro Process Server Python SDK"
authors = [
    "ScienceDesk GmbH <github@sciencedesk.net>",
    "Daniel Debonzi <debonzi@sciencedesk.net>"
]
packages = [
    { include = "upserver_sdk" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
pytest = "^6.1.2"
ipdb = "^0.13.4"
pre-commit = "^2.8.2"
tox = "^3.20.1"
sphinx = "^3.3.1"
sphinxcontrib-apidoc = "^0.3.0"
sphinx_rtd_theme = "^0.5.0"
sphinx-autobuild = "^2020.9.1"

[tool.poetry.scripts]
published = 'upserver_sdk:published'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
